# ros2_control_demos

example_12/bringup/config/: joint_state_broadcaster.yaml  rrbot_chained_controllers.yaml
example_12/bringup/launch/: rrbot.launch.py
example_12/description/ros2_control/: rrbot.ros2_control.xacro
example_12/hardware/: rrbot.cpp
lrmate_200id/: CMakeLists.txt  package.xml  ros2_control_demo_lrmate_200id.xml
lrmate_200id/bringup/config/: arm_controller.yaml  joint_limits.yaml  kinematics.yaml  lrmate_200id.srdf  lrmate_200id_controller.yaml  lrmate_200id_position_publisher.yaml  lrmate_200id_real_controller.yaml  moveit_controllers.yaml
lrmate_200id/bringup/launch/: lrmate_200id_gazebo.launch copy.py  lrmate_200id_gazebo.launch.py  lrmate_200id_moveit.launch.py  lrmate_200id_real_arm.launch.py  send_trajectory.launch.py  test_position_controller.launch.py
lrmate_200id/controller/: lrmate_200id_controller.cpp
lrmate_200id/doc/: userdoc.rst
lrmate_200id/hardware/: lrmate_200id_hardware.cpp
lrmate_200id/reference_generator/: send_trajectory.cpp
lrmate_200id/test/: test_lrmate_200id_controller_launch.py  test_urdf_xacro.py  test_view_robot_launch.py
ros2_control_demo_description/: CMakeLists.txt  package.xml
ros2_control_demo_description/lrmate_200id/rviz/: view_robot.rviz  view_robot2.rviz  view_robot_moveit.rviz
ros2_control_demo_description/lrmate_200id/srdf/: lrmate_200id.srdf
ros2_control_demo_description/lrmate_200id/urdf/: lrmate_200id_description.urdf.xacro
ros2_control_demo_description/lrmate_200id/urdf/inc/: create_link.xacro
(+7 files in other folders)
